@@ -1,3 +1,8 @@
+2006-11-02  Jakub Jelinek  <jakub@redhat.com>
+
+	* malloc/memusage.c (dest): Reset not_me back to false after
+	printing statistics.
+
 2006-11-02  Ulrich Drepper  <drepper@redhat.com>
 
 	* configure.in: Work around ld --help change and avoid -z relro
